--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,200;1,800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/button.css">
-    <link rel="stylesheet" href="css/records.css">
-    <link rel="stylesheet" href="css/modal.css">
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="records.css">
+    <link rel="stylesheet" href="/modal.css">
     <title>CRUD</title>
 </head>
 
@@ -24,7 +22,7 @@
         <button type="button" class="button blue mobile" id="cadastrarCliente">Cadastrar Cliente</button>
         <table id="tableClient" class="records">
             <thead>
-                <tr>
+                <td>
                     <th>Nome</th>
                     <th>E-mail</th>
                     <th>Celular</th>
@@ -36,7 +34,7 @@
 
             </tbody>
         </table>
-        <div class="modal" id="modal">
+        <div class="modal2" id="janela">
             <div class="modal-content">
                 <header class="modal-header">
                     <h2>Novo Cliente</h2>
@@ -45,9 +43,9 @@
                 <form id="form" class="modal-form">
                     <input type="text" id="nome" data-index="new" class="modal-field" placeholder="Nome do Cliente"
                         required>
-                    <input type="email" id="email" class="modal-field" placeholder="e-mail do Cliente" required>
-                    <input type="text" id="celular" class="modal-field" placeholder="Celular do Cliente" required>
-                    <input type="text" id="cidade" class="modal-field" placeholder="Cidade do Cliente" required>
+                    <input type="email" class="modal-field" placeholder="e-mail do Cliente" >
+                    <input type="text" class="modal-field" placeholder="Celular do Cliente" >
+                    <input type="text"  id="modal-field" placeholder="Cidade do Cliente" required>
                 </form>
                 <footer class="modal-footer">
                     <button id="salvar" class="button green">Salvar</button>
